Website url updates

--- a/views/ask.erb
+++ b/views/ask.erb
@@ -29,7 +29,8 @@
   <body>
     <div class="container">
         <div class="jumbotron text-center" >
-            <h1 class="display-4" style = "font-family: 'Poppins'">Evanston Daily : Kellogg Edition</h1>        
+            <h1 class="display-4" style = "font-family: 'Poppins'">The Madison Daily
+            <i class="far fa-newspaper"></i></h1>        
         </div>
     </div>
     <div class="container">
